--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
         <h1>Cinephile Monk</h1>
         <p>You are being redirected to the Amazon page for <em>Christ Figures in Cinema</em> by Cinephile Monk.</p>
-        <p>If you are not redirected in 5 seconds, <a href="https://www.amazon.com/your-book-link">click here</a>.</p>
+        <p>If you are not redirected in 5 seconds, <a href="https://www.amazon.com/dp/B0F9WDLSZV">click here</a>.</p>
         <p>For inquiries, contact the publisher at <a href="mailto:contact@narrativeforgemedia.com">contact@narrativeforgemedia.com</a>.</p>
     </div>
 </body>
