--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cinephile Monk</title>
-    <meta http-equiv="refresh" content="5;url=https://www.amazon.com/your-book-link">
+    <meta http-equiv="refresh" content="5;url=https://www.amazon.com/dp/B0F9WDLSZV">
     <style>
         body {
             font-family: Arial, sans-serif;
